ændringer i den forkerte (produktsiden)

--- a/produkt.html
+++ b/produkt.html
@@ -21,10 +21,10 @@
                     alt="billede1">
             </div>
             <div>
-                <p>NIKE</p>
+                <h1>NIKE</h1>
                 <p><b>Sahara Team India Fanwear Round Neck Jersey</b></p>
                 <p>895,00 kr.</p>
-                <p>Farve: Blå</p>
+                <p class="p_farven_blå">Farve: <b>Blå</b></p>
                 <div class="størrelses_container">
                     <div class="størrelse_dropdown_menu">
                         <label for="size">Vælg størrelse</label>
