--- a/produkt.html
+++ b/produkt.html
@@ -22,12 +22,12 @@
             </div>
             <div>
                 <h1>NIKE</h1>
-                <p><b>Sahara Team India Fanwear Round Neck Jersey</b></p>
-                <p>895,00 kr.</p>
+                <p class="p_produktsiden"><b>Sahara Team India Fanwear Round Neck Jersey</b></p>
+                <p class="p_produktsiden">895,00 kr.</p>
                 <p class="p_farven_blå">Farve: <b>Blå</b></p>
                 <div class="størrelses_container">
                     <div class="størrelse_dropdown_menu">
-                        <label for="size">Vælg størrelse</label>
+                        <label for="size"></label>
                         <select id="size" name="size">
                             <option value="" disabled selected>Vælg størrelse</option>
                             <option value="small">Small</option>
