--- a/produkt.html
+++ b/produkt.html
@@ -16,7 +16,7 @@
 
     <main>
         <div class="produktside_container">
-            <div class="billede_produktside">
+            <!-- <div class="billede_produktside">
                 <img class="produkt_billede_produktside" src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
                     alt="billede1">
             </div>
@@ -38,7 +38,7 @@
                     </div>
                     <button class="indkøbskurv_knap">Læg i indkøbskurv</button>
                 </div>
-            </div>
+            </div> -->
         </div>
 
     </main>
