--- a/index.html
+++ b/index.html
@@ -18,29 +18,19 @@
         <h1 class="h1_side1">CATEGORIES</h1>
         <div class="centerede_bokse">
             <div class="category_list_container">
-                <a class="a_index" href="produktliste.html">
-                    <div class="category">Accessories</div>
-                </a>
-                <a class="a_index" href="produktliste.html">
-                    <div class="category">Apparel</div>
-                </a>
-                <a class="a_index" href="produktliste.html">
-                    <div class="category">Footwear</div>
-                </a>
-                <a class="a_index" href="produktliste.html">
-                    <div class="category boks4">Free Items</div>
-                </a>
-                <a class="a_index" href="produktliste.html">
-                    <div class="category boks5">Personal Care</div>
-                </a>
-                <a class="a_index" href="produktliste.html">
-                    <div class="category boks6">Sporting Goods</div>
-                </a>
+                <!-- <a class="a_index category" href="produktliste.html">Accessories</a>
+                <a class="a_index category" href="produktliste.html">Apparel</a>
+                <a class="a_index category" href="produktliste.html">Footwear</a>
+                <a class="a_index category boks4" href="produktliste.html">Free Items</a>
+                <a class="a_index category boks5" href="produktliste.html">Personal Care</a>
+                <a class="a_index category boks6" href="produktliste.html">Sporting Goods</a> -->
             </div>
         </div>
     </main>
 
     <footer></footer>
+
+    <script src="index.js"></script>
 </body>
 
 </html>
