--- a/produktliste.html
+++ b/produktliste.html
@@ -17,7 +17,7 @@
     <main>
         <h1 class="h1_produktliste">Hottest lige nu</h1>
         <div class="product_list_container">
-            <div class="produkt">
+            <!-- <div class="produkt">
                 <a href="produkt.html">
                     <img class="produkt_billede" src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
                         alt="billede1">
@@ -178,7 +178,7 @@
                     </p>
                 </div>
                 <div class="rabat_boks">Deal</div>
-            </div>
+            </div> -->
         </div>
     </main>
 
